# dotfiles

./: pyproject.toml  update.py
Code/User/: settings.json
configfiles/Users/{user}/: .ideavimrc  .tmux.conf
configfiles/Users/{user}/.config/nvim/: init.lua
configfiles/Users/{user}/.config/nvim/lua/: options.lua
dotconfig/Code/User/: settings.json
dotconfig/i3/: config
dotconfig/i3status/: config
dotmanage/: commands.py  fs.py  main.py  pyproject.toml
dotmanage/dotmanage/: __main__.py  commands.py
dotmanage/dotmanage/models/: ConfigFile.py
dotmanage/models/: ConfigFile.py
i3/config/: config
i3status/: config
