[tool.poetry]
name = "dotmanage"
version = "0.1.0"
description = ""
authors = ["kulgg <75735874+kulgg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
x = "dotmanage.main:main"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.4.0"
exitstatus = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"